fix images squishing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,4 +42,5 @@ a:visited {
 
 img {
     max-width: 100%;
+    height: 100%;
 }
